# xkad

./: CMakeLists.txt  README.md
bench/: CMakeLists.txt  README.md  main.cc  node.cc  node.h  node.pb.cc  node.pb.h  node.proto  util.cc  util.h
demo/: CMakeLists.txt  main.cc
demo/conf/: demo.conf
demo/xkaddemo.xcodeproj/: project.pbxproj
demo/xkaddemo.xcodeproj/xcshareddata/xcschemes/: xkaddemo.xcscheme
demo/xkaddemo.xcodeproj/xcuserdata/imac.xcuserdatad/xcschemes/: xcschememanagement.plist
gossip/: rumor_def.h  rumor_filter.h  rumor_handler.h  rumor_message_manager.h
nat_detect/: nat_defines.h  nat_handshake_manager.h  nat_manager.h  nat_manager_intf.h
proto/: kadmlia.pb.cc  kadmlia.pb.h  kadmlia.proto  ledger.pb.cc  ledger.pb.h  ledger.proto
routing_table/: bootstrap_cache.h  bootstrap_cache_helper.h  callback_manager.h  client_node_manager.h  dynamic_xip_manager.h  heartbeat_manager.h  heartbeat_state.h  kad_message_handler.h  local_node_info.h  nat_detect_manager.h  node_detection_manager.h  node_info.h  nodeid_utils.h  routing_table.h  (+2 more)
tests/: CMakeLists.txt  lcov.sh  node_mgr.cc  node_mgr.h  test_bootstrap_cache.cc  test_bootstrap_cache_helper.cc  test_callback_manager.cc  test_client_node_manager.cc  test_dynamic_xip_manager.cc  test_heartbeat_state.cc  test_kad_message_handler.cc  test_local_node_info.cc  test_main.cc  test_nat_handshake_manager.cc  test_nat_manager.cc  test_node_detection_manager.cc  test_node_info.cc  test_routing_table.cc  test_routing_table2.cc  test_routing_table3.cc  test_routing_table_heartbeat.cc  test_routing_utils.cc
(+42 files in other folders)
